Fix grid so that it doesn't overflow container

--- a/style.css
+++ b/style.css
@@ -1,34 +1,26 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-}
-
-.grid-wrap {
-    max-width: 575px;
-    width: 100%;
 }
 
 .grid-container {
+    max-width: 600px;
     border: 1px solid black;
     width: 100%;
-    height: 0;
-    padding-bottom: 100%;
     display: flex;
     flex: 1;
-}
-
-.grid-column {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+    flex-wrap: wrap;
+    aspect-ratio: 1/1;
 }
 
 .grid-squares {
     border: 1px solid black;
-    max-width: 100%;
-    width: 100%;
-    height: 0;
-    padding-bottom: 100%; 
+    /* height: 0; */
+    box-sizing: border-box;
 }
+
